# tostii

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  monodomain.cc  monodomain_direct.cc  neutron.cc  nse.cc  nse_three.cc  parameters.prm  run.sh  tostii.cc  tostii.h
Lheat/: CMakeLists.txt  Lheat.cc
Lheat/doc/: Lheat.tex
ac/: CMakeLists.txt  Makefile  ac.cc
adr/: CMakeLists.txt  Makefile  adr.cc  adr_v2.cc  cmake_install.cmake
bidomain/: CMakeLists.txt  bidomain.cc  bidomain.h  bidomain.inl  bidomain_fhn.cc  bidomain_fhn.h  bidomain_fhn.inl  bidomain_fhn_manual.cc  bidomain_fhn_manual.h  bidomain_fhn_manual.inl  bidomain_godunov.cc  bidomain_godunov.h  bidomain_godunov.inl  bidomain_linear.cc  bidomain_linear.h  bidomain_linear.inl  fitzhugh-nagumo.cc  fitzhugh-nagumo.h  fitzhugh-nagumo.inl  parameters.cc  parameters.h  parameters.prm  prescribed_data.cc  prescribed_data.h  prescribed_data.inl  prescribed_data_2.cc  prescribed_data_2.inl
bidomain/doc/: bidomain.tex  fitzhugh-nagumo.tex
cmake/: CMakeLists.txt  Makefile  cmake_install.cmake
cmake/macros/: deal_II_executable.cmake  tostii_executable.cmake
cmake/tostii/: tostiiConfig.cmake
complexpde/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  complex.cc
doc/: CMakeLists.txt  Doxyfile.tostii_doc  Makefile  cmake_install.cmake
examples/ac/: cmake_install.cmake
examples/adr/: adr.cc  adr_v2.cc
examples/complexpde/: real_system.cc
include/tostii/: tostii.h  tostiiv2.h
include/tostii/checkpoint/: checkpointer.h  checkpointer.inl  save_manager.h  save_manager.inl  serialize_petsc_mpi.h  serialize_petsc_mpi.inl
include/tostii/grid/: L_shape.h  L_shape.inl
include/tostii/time_stepping/: exact.h  exact.inl  explicit_runge_kutta.h  explicit_runge_kutta.inl  implicit_runge_kutta.h  implicit_runge_kutta.inl  linear_implicit_runge_kutta.h  linear_implicit_runge_kutta.inl  operator_split.h  operator_split.inl  operator_split_single.h  operator_split_single.inl  runge_kutta.h  runge_kutta.inl  time_stepping.h
monodomain/: CMakeCache.txt  CMakeLists.txt  FitzHughNagumo.h  FitzHughNagumo1961EB2008.h  InitialConditionFactory.h  Makefile  cmake_install.cmake  kII_disk.prm  kII_spiral.prm  kII_spiral_arkode.prm  kII_spiral_implicit_sdirk2.prm  monodomain.cc  monodomain_direct.cc  monodomain_parameters  monodomain_parameters.prm  parallel_bdf_fhn.cc  parallel_implicit_fhn.cc  parallel_os_fhn.cc  parallel_os_fhn.prm  parallel_sdirk_fhn.cc
neutron/: CMakeLists.txt  neutron.cc
nse/: CMakeLists.txt  monolithic.cc  monolithic_arkode.cc  monolithic_hs.cc  monolithic_hs.h  monolithic_hs.inl  monolithic_ida.cc  monolithic_rk.cc  nse.cc  nse_three.cc  parameters.cc  parameters.h  parameters.prm  prescribed_data.cc  prescribed_data.h  prescribed_data.inl  step-58.cc  utils.cc  utils.h  utils.inl
nse/doc/: nse.tex
src/: CMakeLists.txt  Makefile  cmake_install.cmake  tostii.cc  tostiiv2.cc
src/checkpoint/: CMakeLists.txt  checkpointer.cc  save_manager.cc  serialize_petsc_mpi.cc
src/grid/: CMakeLists.txt  L_shape.cc
src/time_stepping/: CMakeLists.txt  exact.cc  explicit_runge_kutta.cc  implicit_runge_kutta.cc  linear_implicit_runge_kutta.cc  operator_split.cc  operator_split_single.cc  runge_kutta.cc
